# profil.bio

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  VERCEL_DEPLOY.md  docker-compose.prod.yml  docker-compose.yml  package.json  railway-backend.json  railway-python.json  railway-rust.json  vercel.json
.github/: copilot-instructions.md
ai/rust-service/: Dockerfile
backend/: Dockerfile  go.mod  go.sum  main.go
db/: schema.sql
frontend/: .env.example  Dockerfile  Dockerfile.frontend  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/articles/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/feed/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/thoughts/: page.tsx
frontend/components/: AIConversationArticle.tsx  ConvictionMeter.tsx  CreativityMeter.tsx  LoadingScreen.tsx  Navigation.tsx  PhilosophyCharacters.tsx  SNSLinks.tsx  ShareButtons.tsx  UniverseVisualization.tsx
infra/: Dockerfile  Dockerfile.go  Dockerfile.python  Dockerfile.rust  docker-compose.yml  start-services.sh
iot/: fugu_frog_device.ino
microservices/nodejs-ai/: package.json
microservices/python-sns/: Dockerfile  main.py  main_simple.py  requirements.txt
microservices/python-wisdom/: Dockerfile  app.py
microservices/rust-ai/: .dockerignore  Cargo.toml  Dockerfile
microservices/rust-ai/src/: ai_engine.rs  character_ai.rs  lib.rs  main.rs  nlp.rs
microservices/rust-perfection/: Cargo.toml  Dockerfile
microservices/rust-perfection/src/: main.rs
