[package]
name = "philosophy-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
rand = "0.8"
regex = "1.0"

[lib]
name = "philosophy_ai"
path = "src/lib.rs"

[[bin]]
name = "ai_server"
path = "src/main.rs"
