[package]
name = "philosophy-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
regex = "1.10"

[lib]
name = "philosophy_ai"
path = "src/lib.rs"

[[bin]]
name = "philosophy-ai"
path = "src/main.rs"
